Add Dockerfile to .dockerignore and update Dockerfile to use nodemon for development

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start:dev": "nodemon index.js",
+    "start:watch": "node --watch index.js"
+  },
+  "nodemonConfig": {
+    "legacyWatch": true
   },
   "keywords": [],
   "author": "",
