--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "start:dev": "nodemon src/index.js",
+    "start": "cross-env  NODE_ENV=defualt node src/index.js",
+    "start:prod": "cross-env  NODE_ENV=prod node src/index.js",
+    "start:dev": "cross-env NODE_ENV=dev nodemon  src/index.js",
     "start:watch": "node --watch index.js"
   },
   "nodemonConfig": {
@@ -15,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.18.3"
   },
   "devDependencies": {
