Update Dockerfile and docker-compose files for different environments
Add conditional npm install in Dockerfile based on NODE_ENV.
Update docker-compose files with NODE_ENV specific configurations.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,19 +2,16 @@ version: "3.8"
 
 services:
   hello-express:
-    volumes:
-      - ./src:/app/src:ro
+    command:
+      - start
 
     build:
       context: .
       args:
-        - NODE_ENV=development
-
-    command:
-      - start:dev
+        - NODE_ENV=production
 
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
 
     ports:
       - "80:80"
