Update Dockerfile and docker-compose files for better organization
- Added separate stages for development, production, and testing in Dockerfile
- Updated docker-compose files to target specific stages for builds
- Adjusted package.json scripts for consistency and clarity

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,8 +7,9 @@ services:
 
     build:
       context: .
-      args:
-        - NODE_ENV=development
+      # args:
+      #   - NODE_ENV=development
+      target: development
 
     command:
       - start:dev
