--- a/docker-compose.tes.yml
+++ b/docker-compose.tes.yml
@@ -7,8 +7,9 @@ services:
 
     build:
       context: .
-      args:
-        - NODE_ENV=testing
+      # args:
+      #   - NODE_ENV=testing
+      target: testing
 
     command:
       - start:testing
