--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,8 +7,9 @@ services:
 
     build:
       context: .
-      args:
-        - NODE_ENV=production
+      # args:
+      #   - NODE_ENV=production
+      target: production
 
     environment:
       - NODE_ENV=production
