--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env  NODE_ENV=prod node src/index.js",
-    "start:testing": "cross-env   node src/index.js",
+    "start": "cross-env  NODE_ENV=production node src/index.js",
+    "start:test": "cross-env   node src/index.js",
     "start:dev": "cross-env NODE_ENV=dev nodemon  src/index.js",
     "start:watch": "node --watch index.js"
   },
